tests/ui/error-codes/E0308.stderr
error[E0308]: intrinsic has wrong type
  --> $DIR/E0308.rs:6:20
   |
LL |     fn size_of<T>();
   |                    ^ expected `usize`, found `()`
   |
   = note: expected signature `extern "rust-intrinsic" fn() -> usize`
              found signature `extern "rust-intrinsic" fn()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
